# freertos_cmake_linux

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  app.c  main.c
